--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,10 +106,13 @@ install(FILES
   DESTINATION ${SOEM_INCLUDE_INSTALL_DIR})
 
 if(BUILD_TESTS) 
-  add_subdirectory(test/playground)
+  #add_subdirectory(test/playground)
   add_subdirectory(test/simple_ng)
-  add_subdirectory(test/somanet)
-  add_subdirectory(test/linux/slaveinfo)
-  add_subdirectory(test/linux/eepromtool)
-  add_subdirectory(test/linux/simple_test)
+  add_subdirectory(test/meas)
+  #add_subdirectory(test/somanet)
+  #add_subdirectory(test/linux/slaveinfo)
+  #add_subdirectory(test/linux/eepromtool)
+  #add_subdirectory(test/linux/simple_test)
+  add_subdirectory(test/win32/simple_test)
+  add_subdirectory(test/win32/slaveinfo)
 endif()
